translations_exported/de/docs_exported/1.18/crafttweaker/docs/vanilla/api/BracketDumpers.md
# BracketDumpers

## Diese Klasse importieren

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.BracketDumpers;
```


## Static Methods

:::group{name=getAttributeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getAttributeDump() as Collection<string>

BracketDumpers.getAttributeDump();
```

:::

:::group{name=getBlockDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getBlockDump() as Collection<string>

BracketDumpers.getBlockDump();
```

:::

:::group{name=getCreativeModeTabBracketDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getCreativeModeTabBracketDump() as Collection<string>

BracketDumpers.getCreativeModeTabBracketDump();
```

:::

:::group{name=getDamageSourceDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getDamageSourceDump() as Collection<string>

BracketDumpers.getDamageSourceDump();
```

:::

:::group{name=getEffectDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getEffectDump() as Collection<string>

BracketDumpers.getEffectDump();
```

:::

:::group{name=getEnchantmentDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getEnchantmentDump() as Collection<string>

BracketDumpers.getEnchantmentDump();
```

:::

:::group{name=getEntityTypeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getEntityTypeDump() as Collection<string>

BracketDumpers.getEntityTypeDump();
```

:::

:::group{name=getItemBracketDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getItemBracketDump() as Collection<string>

BracketDumpers.getItemBracketDump();
```

:::

:::group{name=getMaterialDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getMaterialDump() as Collection<string>

BracketDumpers.getMaterialDump();
```

:::

:::group{name=getPotionTypeDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getPotionTypeDump() as Collection<string>

BracketDumpers.getPotionTypeDump();
```

:::

:::group{name=getProfessionDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getProfessionDump() as Collection<string>

BracketDumpers.getProfessionDump();
```

:::

:::group{name=getSoundEventDump}

Return Type: Collection&lt;string&gt;

```zenscript
// BracketDumpers.getSoundEventDump() as Collection<string>

BracketDumpers.getSoundEventDump();
```

:::

